Resources/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  namespace: demo-app
spec:
  containers:
  - name: nginx
    image: localhost:32000/mynginx:registry
    ports:
    - containerPort: 80
