Resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-home-ingress
  namespace: demo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: host2123222.com 
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: nginx-home-service
            port:
              number: 80
